--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  line-height: 1.5;
   display: flex;
   justify-content: center;
   align-items: center;
